Changed the screen view

--- a/calc.html
+++ b/calc.html
@@ -13,8 +13,10 @@
         <h1>Simple Calculator</h1>
     </header>
     <main>
-       <section id="previous"></section>
-       <section id="output"></section>
+        <section  id="screen">
+        <section id="previous"></section>
+        <section id="output"></section> 
+        </section>
        <section id="numbers">
         <button data-number>1</button>
         <button data-number>2</button>
